# 0718

./: .gitignore  AGENTS.md  NOTES.md  README.md  pyproject.toml
app/: __init__.py  database.py  main.py  schemas.py  security.py
docs/: api.md  architecture.md  security.md  streaming.md  troubleshooting.md
public/: app.js  index.html  manual.html  styles.css
tests/: conftest.py  test_accounts.py  test_database.py  test_inference.py  test_pages.py
