[project]
name = "llm-inference-service-mvp"
version = "0.1.0"
description = "Account, API key, and OpenAI-compatible mock inference MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1",
    "pwdlib[argon2]>=0.2.1,<1",
    "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=8.4.1,<9",
    "ruff>=0.12.4,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
